--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,110 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261558054564109%22%3A%22NgpVgwW1%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "datr",
+        "value": "copAaKWQZa3n8UuY8EEsXBzl",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "sb",
+        "value": "copAaIMEtHquDft0Yq0uMtn1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61567287934615",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "xs",
+        "value": "5%3AgmrGoFpheAE8iQ%3A2%3A1749558503%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B772x393x2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "fr",
+        "value": "0EGFAtfgMHA3P4c8z.AWcFhqMrgJajRePBG7eoQFfm0598amonIhwJJ5wt52BqnyAS_js.BoQIpy..AAA.0.0.BoTpUS.AWeUskzy6oQhB9IXXeH9qvsWkj8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100439401%3BT%3A29166340",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2844%3Btimestamp%3A1749980434",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-15T09:40:42.606Z",
+        "lastAccessed": "2025-06-15T09:40:42.606Z"
+    }
+]
