--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "—͟͟͞͞𝐕𝐨𝐢𝐜𝐞 𝐒𝐭𝐚𝐭𝐢𝐨𝐧 𝐁𝐨𝐭",
-    "PREFIX": "/",
+    "PREFIX": "-",
     "ADMINBOT": [
         "100041336504284",
         "100094264778217"
